# mai_oop_lab_04

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  hexagon.h  pentagon.h  rhombus.h
tests/: test.cpp
